tests/snapshots/jsx__keep_multiple_forced_newlines.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>
  Keep multiple{"\n"}
  forced{"\n"}
  newlines!
</Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "9xE5pD",
    message: "Keep multiple\nforced\nnewlines!"
}}/>;
