tests/snapshots/jsx__non_breaking_whitespace_handling_2226.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>
  <span>hello</span>
  &nbsp;
  <span>world</span>
</Trans>;


↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "kJt6bJ",
    components: {
        0: <span/>,
        1: <span/>
    },
    message: "<0>hello</0> <1>world</1>"
}}/>;
