tests/snapshots/jsx__strip_whitespace_around_tags_but_keep_forced_spaces.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>
  Strip whitespace around tags, but keep{" "}
  <strong>forced spaces</strong>
  !
</Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "Ud4KOf",
    components: {
        0: <strong/>
    },
    message: "Strip whitespace around tags, but keep <0>forced spaces</0>!"
}}/>;
